# Rental_Agent

./: .gitignore  README.md  docker-compose.yml  main_server.py  pyproject.toml  start_dev.sh  streamlit_demo_en.py  test.json  test_dataset_process.py
backend/: .dockerignore  .gitignore  API_Service_Testing_Notebook.ipynb  Dockerfile  api_service_test.ipynb  langgraph.json  pyproject.toml  rental_agents_memory_example.ipynb  test_models.py
backend/app/: config.py
backend/app/agents/: __init__.py  agents_factory.py  base.py  landlord.py  manager.py  market_analyst.py  tenant.py
backend/app/agents/models/: __init__.py  (+3 more)
backend/app/api/: __init__.py  rapid.py  rental_dataset.py
backend/app/api_service/: __init__.py  group_negotiation.py  main.py  message_router.py  models.py  negotiation_service.py  rental_api.py  utils.py  websocket.py  websocket_handler.py
backend/app/conversation_service/: __init__.py  generate_response.py  meta_controller.py  reset_conversation.py  tools.py
backend/app/data_analysis/: market_analyzer.py  market_analyzer_api.py
backend/app/latex/: __init__.py
backend/app/mongo/: __init__.py  client.py  indexes.py  initialize_database.py
backend/app/mongodb/: client.py
backend/app/rag/: __init__.py  embeddings.py  retrievers.py  splitters.py
backend/app/raw_data/: __init__.py  rental_dataset.py
backend/app/utils/: RateLimitBackOff.py  __init__.py  history_logs.py  message_utils.py  opik_utils.py  sci_style.py
backend/config/: config.example.toml
backend/dataset/rental_contract_template/: tenancyAgreement.fdb_latexmk  tenancyAgreement.fls  tenancyAgreement.tex  tenancyAgreement.xdv
backend/docs/: Opik_Utils_Usage.md  技术文档_PhiloAgents_后端架构与数据库设计.md
backend/docs/DevelopLog/: SYSTEM_STATUS.md  mongodb_setup.md
backend/docs/markdown/: PROJECT_OVERVIEW.md
backend/once_scripts/: deduplicate_properties.py  pdf_to_side_by_side_image.py  rental_agents_memory_example.ipynb  test_dataset_process.py  test_rental_latex.py
(+213 files in other folders)
