[project]
name = "rental-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.5.7",
    "autogen-ext>=0.5.7",
    "openai>=1.82.0",
    "pyautogen>=0.9",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "folium>=0.14.0",
    "numpy>=1.21.0",
    "geopandas>=1.0.1",
    "xyzservices>=2025.4.0",
]
