[project]
name = "rental-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.5.7",
    "autogen-ext>=0.5.7",
    "openai>=1.82.0",
    "pyautogen>=0.9",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "folium>=0.14.0",
    "numpy>=1.21.0",
    "geopandas>=1.0.1",
    "xyzservices>=2025.4.0",
    "pypdf2>=3.0.1",
    "pywhatkit>=5.4",
    "pillow>=11.2.1",
    "autogen>=0.9.1.post0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "plotly>=6.1.2",
    "faker>=37.3.0",
    "pymongo == 4.11.3",
    "motor>=3.7.1",
    "loguru>=0.7.3",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
    "pydantic>=2.11.5",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "ipykernel>=6.29.5",
    "sentence-transformers>=4.1.0",
    "ipython>=9.3.0",
    "markdownify>=1.1.0",
    "pypdf>=5.6.0",
    "chromadb>=0.6.3",
    "langgraph>=0.4.8",
    "langsmith>=0.3.44",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.19",
    "contextily>=1.6.2",
    "opik>=1.7.30",
    "langgraph-cli[inmem]>=0.2.11",
    "langgraph-sdk>=0.1.70",
    "langchain>=0.3.25",
    "transformers>=4.52.4",
    "huggingface-hub>=0.32.4",
    "langchain-huggingface>=0.2.0",
    "langchain-mongodb>=0.6.2",
    "langchain-groq>=0.3.2",
    "langgraph-checkpoint-mongodb>=0.1.3",
]
